--- a/more-scenarios/medical/configs/acdc.yaml
+++ b/more-scenarios/medical/configs/acdc.yaml
@@ -2,11 +2,13 @@
 dataset: acdc
 nclass: 4
 crop_size: 256
-data_root: D:\Cyz\Github\UniMatch-main\ACDC\ACDC
+data_root: /public/home/jd_cyz/code/Unimatch/dataset/ACDC
 #data_root: Your/ACDC/Path
 
 # arguments for training
-epochs: 20  #300
-batch_size: 1 # per GPU x 1 GPU  #12
-lr: 0.01
-conf_thresh: 0.95  # 在无标注数据集的损失函数中利用阈值cfg['conf_thresh']过滤掉低置信度像素点。
+epochs: 600  #300
+batch_size: 12 # per GPU x 1 GPU  #12
+# lr: 0.01
+lr: 0.0005
+conf_thresh: 0.95
+
